# MemoRAG

./: README.md  corpus.parquet  main.py  pyproject.toml  qa.parquet  requirements.txt  run_bulk.py  sample_corpus.parquet
data/qasper/: corpus.parquet  qa.parquet
memorag/: __init__.py  memorag.py  memorag_lite.py
memory/finder_legal_16/: chunks.json  result.parquet
